@@ -1,3 +1,10 @@
+December 05, 2005 - Ping Cheng
+
+We managed to merge x86 and x86-64 back into one package now (release 0.7.1). 
+The package contents have been changed too (no need to build mousedev and 
+usbmouse and change //dev/input/mice in X configure file xorg.conf or XF86Config 
+for 2.6.x anymore). Refer to ChangeLog and website for details. 
+
 August 18, 2005 - Ping Cheng
 
 Starting from version 0.6.9, x86-64bit system support is released in a 
